force-app/main/default/objects/Candidate_System_Access__c/Candidate_System_Access__c.object-meta.xml
<CustomObject>
    <label>Candidate System Access</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate System Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>