force-app/main/default/objects/Candidate_System_Access__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Granted Date</label>
    <type>Date</type>
</CustomField>