force-app/main/default/objects/Candidate_System_Access__c/fields/Revoked_Date__c.field-meta.xml
<CustomField>
    <fullName>Revoked_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revoked Date</label>
    <type>Date</type>
</CustomField>